// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Media Player: Placeholder should render a video placeholder 1`] = `
.emotion-0 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-0:hover .emotion-6,
.emotion-0:focus .emotion-6 {
  background-color: #B80000;
}

.emotion-2 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.125rem;
  width: 100%;
  height: 100%;
  position: absolute;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    font-size: 0.875rem;
  }
}

.emotion-4 {
  position: absolute;
  bottom: 0;
  display: none;
}

.emotion-7 {
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  height: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  width: 5rem;
  position: absolute;
  bottom: 0;
}

.emotion-7:hover,
.emotion-7:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

.emotion-9 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-11>svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  margin-top: 0.5rem;
  width: 1.5rem;
}

.emotion-13 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-15 {
  display: block;
  margin-top: 0.5rem;
}

.emotion-17 {
  display: block;
  width: 100%;
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-e2e="media-player__placeholder"
  >
    <div
      class="emotion-2 emotion-3"
      data-e2e="media-player__guidance"
    >
      <noscript
        class="emotion-4 emotion-5"
      />
    </div>
    <button
      class="emotion-6 emotion-7 emotion-8"
    >
      <span
        class="emotion-9 emotion-10"
      >
        Play video, "Dog chases cat.", 2 minutes 30 seconds
      </span>
      <div
        aria-hidden="true"
        class="emotion-11 emotion-12"
      >
        <svg
          aria-hidden="true"
          class="emotion-13 emotion-14"
          focusable="false"
          height="12px"
          viewBox="0 0 32 32"
          width="12px"
        >
          <polygon
            points="3,32 29,16 3,0"
          />
        </svg>
      </div>
      <time
        aria-hidden="true"
        class="emotion-15 emotion-16"
        datetime="PT2M30S"
      >
        2:30
      </time>
    </button>
    <img
      alt=""
      class="emotion-17 emotion-18"
      src="http://foo.bar/placeholder.png"
    />
  </div>
</div>
`;

exports[`Media Player: Placeholder should render a video placeholder with guidance 1`] = `
.emotion-0 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-0:hover .emotion-8,
.emotion-0:focus .emotion-8 {
  background-color: #B80000;
}

.emotion-2 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.125rem;
  width: 100%;
  height: 100%;
  position: absolute;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
  background-color: rgba(34, 34, 34, 0.75);
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    font-size: 0.875rem;
  }
}

@media screen and (-ms-high-contrast: active) {
  .emotion-2 {
    background-color: transparent;
  }
}

.emotion-4 {
  display: block;
  font-weight: normal;
  padding: 0.5rem;
  border-bottom: 0.0625rem solid transparent;
}

@media screen and (-ms-high-contrast: active) {
  .emotion-4 {
    background-color: window;
  }
}

@media (min-width: 25rem) {
  .emotion-4 {
    padding: 1rem;
  }
}

.emotion-6 {
  position: absolute;
  bottom: 0;
  display: none;
}

.emotion-9 {
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  height: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  width: 5rem;
  position: absolute;
  bottom: 0;
}

.emotion-9:hover,
.emotion-9:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

.emotion-11 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-13>svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  margin-top: 0.5rem;
  width: 1.5rem;
}

.emotion-15 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-17 {
  display: block;
  margin-top: 0.5rem;
}

.emotion-19 {
  display: block;
  width: 100%;
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-e2e="media-player__placeholder"
  >
    <div
      class="emotion-2 emotion-3"
      data-e2e="media-player__guidance"
    >
      <strong
        aria-hidden="true"
        class="guidance-message emotion-4 emotion-5"
      >
        Guidance: May contain strong language, sexual or violent content that may offend.
      </strong>
      <noscript
        class="emotion-6 emotion-7"
      />
    </div>
    <button
      class="emotion-8 emotion-9 emotion-10"
    >
      <span
        class="emotion-11 emotion-12"
      >
        Guidance: May contain strong language, sexual or violent content that may offend. Play video, "Dog chases cat.", 2 minutes 30 seconds
      </span>
      <div
        aria-hidden="true"
        class="emotion-13 emotion-14"
      >
        <svg
          aria-hidden="true"
          class="emotion-15 emotion-16"
          focusable="false"
          height="12px"
          viewBox="0 0 32 32"
          width="12px"
        >
          <polygon
            points="3,32 29,16 3,0"
          />
        </svg>
      </div>
      <time
        aria-hidden="true"
        class="emotion-17 emotion-18"
        datetime="PT2M30S"
      >
        2:30
      </time>
    </button>
    <img
      alt=""
      class="emotion-19 emotion-20"
      src="http://foo.bar/placeholder.png"
    />
  </div>
</div>
`;

exports[`Media Player: Placeholder should render a video placeholder without duration 1`] = `
.emotion-0 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-0:hover .emotion-6,
.emotion-0:focus .emotion-6 {
  background-color: #B80000;
}

.emotion-2 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.125rem;
  width: 100%;
  height: 100%;
  position: absolute;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    font-size: 0.875rem;
  }
}

.emotion-4 {
  position: absolute;
  bottom: 0;
  display: none;
}

.emotion-7 {
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  height: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  width: 5rem;
  position: absolute;
  bottom: 0;
}

.emotion-7:hover,
.emotion-7:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

.emotion-9 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-11>svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  width: 1.5rem;
}

.emotion-13 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-15 {
  display: block;
  width: 100%;
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-e2e="media-player__placeholder"
  >
    <div
      class="emotion-2 emotion-3"
      data-e2e="media-player__guidance"
    >
      <noscript
        class="emotion-4 emotion-5"
      />
    </div>
    <button
      class="emotion-6 emotion-7 emotion-8"
    >
      <span
        class="emotion-9 emotion-10"
      >
        Play video, "Dog chases cat."
      </span>
      <div
        aria-hidden="true"
        class="emotion-11 emotion-12"
      >
        <svg
          aria-hidden="true"
          class="emotion-13 emotion-14"
          focusable="false"
          height="12px"
          viewBox="0 0 32 32"
          width="12px"
        >
          <polygon
            points="3,32 29,16 3,0"
          />
        </svg>
      </div>
    </button>
    <img
      alt=""
      class="emotion-15 emotion-16"
      src="http://foo.bar/placeholder.png"
    />
  </div>
</div>
`;

exports[`Media Player: Placeholder should render an audio placeholder 1`] = `
.emotion-0 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-0:hover .emotion-6,
.emotion-0:focus .emotion-6 {
  background-color: #B80000;
}

.emotion-2 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.125rem;
  width: 100%;
  height: 100%;
  position: absolute;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    font-size: 0.875rem;
  }
}

.emotion-4 {
  position: absolute;
  bottom: 0;
  display: none;
}

.emotion-7 {
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  height: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  width: 5rem;
  position: absolute;
  bottom: 0;
}

.emotion-7:hover,
.emotion-7:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

.emotion-9 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-11>svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  margin-top: 0.5rem;
  width: 1.5rem;
}

.emotion-13 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.8125rem;
  height: 0.75rem;
}

.emotion-15 {
  display: block;
  margin-top: 0.5rem;
}

.emotion-17 {
  display: block;
  width: 100%;
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-e2e="media-player__placeholder"
  >
    <div
      class="emotion-2 emotion-3"
      data-e2e="media-player__guidance"
    >
      <noscript
        class="emotion-4 emotion-5"
      />
    </div>
    <button
      class="emotion-6 emotion-7 emotion-8"
    >
      <span
        class="emotion-9 emotion-10"
      >
        Play audio, "Dog barks at cat.", 2 minutes 30 seconds
      </span>
      <div
        aria-hidden="true"
        class="emotion-11 emotion-12"
      >
        <svg
          aria-hidden="true"
          class="emotion-13 emotion-14"
          focusable="false"
          height="12px"
          viewBox="0 0 13 12"
          width="13px"
        >
          <path
            d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
          />
          <path
            d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
          />
        </svg>
      </div>
      <time
        aria-hidden="true"
        class="emotion-15 emotion-16"
        datetime="PT2M30S"
      >
        2:30
      </time>
    </button>
    <img
      alt=""
      class="emotion-17 emotion-18"
      src="http://foo.bar/placeholder.png"
    />
  </div>
</div>
`;

exports[`Media Player: Placeholder should render an audio placeholder without duration 1`] = `
.emotion-0 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-0:hover .emotion-6,
.emotion-0:focus .emotion-6 {
  background-color: #B80000;
}

.emotion-2 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.125rem;
  width: 100%;
  height: 100%;
  position: absolute;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    font-size: 0.875rem;
  }
}

.emotion-4 {
  position: absolute;
  bottom: 0;
  display: none;
}

.emotion-7 {
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  height: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  width: 5rem;
  position: absolute;
  bottom: 0;
}

.emotion-7:hover,
.emotion-7:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

.emotion-9 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-11>svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  width: 1.5rem;
}

.emotion-13 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.8125rem;
  height: 0.75rem;
}

.emotion-15 {
  display: block;
  width: 100%;
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-e2e="media-player__placeholder"
  >
    <div
      class="emotion-2 emotion-3"
      data-e2e="media-player__guidance"
    >
      <noscript
        class="emotion-4 emotion-5"
      />
    </div>
    <button
      class="emotion-6 emotion-7 emotion-8"
    >
      <span
        class="emotion-9 emotion-10"
      >
        Play audio, "Dog barks at cat."
      </span>
      <div
        aria-hidden="true"
        class="emotion-11 emotion-12"
      >
        <svg
          aria-hidden="true"
          class="emotion-13 emotion-14"
          focusable="false"
          height="12px"
          viewBox="0 0 13 12"
          width="13px"
        >
          <path
            d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
          />
          <path
            d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
          />
        </svg>
      </div>
    </button>
    <img
      alt=""
      class="emotion-15 emotion-16"
      src="http://foo.bar/placeholder.png"
    />
  </div>
</div>
`;

exports[`Media Player: Placeholder should render no-js styles when noJsClassName prop is used 1`] = `
.emotion-0 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: default;
}

.emotion-0:hover .emotion-8,
.emotion-0:focus .emotion-8 {
  background-color: #B80000;
}

.emotion-2 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.125rem;
  width: 100%;
  height: 100%;
  position: absolute;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
  background-color: rgba(34, 34, 34, 0.75);
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    font-size: 0.875rem;
  }
}

@media screen and (-ms-high-contrast: active) {
  .emotion-2 {
    background-color: transparent;
  }
}

.no-js .emotion-2 {
  background-color: rgba(34, 34, 34, 0.75);
}

@media screen and (-ms-high-contrast: active) {
  .no-js .emotion-2 {
    background-color: transparent;
  }
}

.no-js .emotion-2 .guidance-message {
  display: none;
}

.emotion-4 {
  display: block;
  font-weight: normal;
  padding: 0.5rem;
  border-bottom: 0.0625rem solid transparent;
}

@media screen and (-ms-high-contrast: active) {
  .emotion-4 {
    background-color: window;
  }
}

@media (min-width: 25rem) {
  .emotion-4 {
    padding: 1rem;
  }
}

.emotion-6 {
  position: absolute;
  bottom: 0;
}

.emotion-9 {
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  height: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  width: 5rem;
  position: absolute;
  bottom: 0;
}

.emotion-9:hover,
.emotion-9:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

.no-js .emotion-9 {
  display: none;
}

.emotion-11 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-13>svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  margin-top: 0.5rem;
  width: 1.5rem;
}

.emotion-15 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-17 {
  display: block;
  margin-top: 0.5rem;
}

.emotion-19 {
  display: block;
  width: 100%;
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-e2e="media-player__placeholder"
  >
    <div
      class="emotion-2 emotion-3"
      data-e2e="media-player__guidance"
    >
      <strong
        aria-hidden="true"
        class="guidance-message emotion-4 emotion-5"
      >
        Guidance: May contain strong language, sexual or violent content that may offend.
      </strong>
      <noscript
        class="emotion-6 emotion-7"
      />
    </div>
    <button
      class="emotion-8 emotion-9 emotion-10"
    >
      <span
        class="emotion-11 emotion-12"
      >
        Guidance: May contain strong language, sexual or violent content that may offend. Play video, "Dog chases cat.", 2 minutes 30 seconds
      </span>
      <div
        aria-hidden="true"
        class="emotion-13 emotion-14"
      >
        <svg
          aria-hidden="true"
          class="emotion-15 emotion-16"
          focusable="false"
          height="12px"
          viewBox="0 0 32 32"
          width="12px"
        >
          <polygon
            points="3,32 29,16 3,0"
          />
        </svg>
      </div>
      <time
        aria-hidden="true"
        class="emotion-17 emotion-18"
        datetime="PT2M30S"
      >
        2:30
      </time>
    </button>
    <img
      alt=""
      class="emotion-19 emotion-20"
      src="http://foo.bar/placeholder.png"
    />
  </div>
</div>
`;
